fix: Add Keydown Event

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="mt-5">
                 <audio src="" id="audio"></audio>
-                <div class="h-[3px] relative bg-gray-300">
+                <div class="h-[3px] relative bg-gray-300 cursor-pointer" id="progressBarContent">
                     <div class="absolute w-[0] h-[3px] bg-gray-600 top-0 left-0" id="progressBar"></div>
                 </div>
                 <div class="flex justify-between text-xs pt-1">
